@@ -15,7 +15,7 @@ jitter <- function(x, factor = 1, amount=NULL)
     if(is.null(amount)) {		# default: Find 'necessary' amount
 	d <- diff(xx <- unique(sort.int(round(x, 3 - floor(log10(z))))))
 	d <- if(length(d)) min(d) else if(xx!=0) xx/10 else z/10
-	amount <- factor/5 * d
+	amount <- factor/5 * abs(d)
     } else if(amount == 0)		# only then: S compatibility
 	amount <- factor * (z/50)
 
